--- a/Services/Prescription/Hospital.Prescription/Hospital.Prescription.csproj
+++ b/Services/Prescription/Hospital.Prescription/Hospital.Prescription.csproj
@@ -7,13 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.36" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.31" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Settings\" />
   </ItemGroup>
 
 </Project>
