--- a/Services/Prescription/Hospital.Prescription/Properties/launchSettings.json
+++ b/Services/Prescription/Hospital.Prescription/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "Hospital.Prescription": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7187;http://localhost:5043",
+      "applicationUrl": "http://localhost:7187",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
